--- a/nchrp-17-113-countermeasure-v10-july-2025.json
+++ b/nchrp-17-113-countermeasure-v10-july-2025.json
@@ -2201,24 +2201,24 @@
         "Countermeasure 1": "Advance intersection warning signs",
         "Countermeasure 2": "Retroreflective sheeting on signposts",
         "Countermeasure 3": "",
-        "Key Stakeholder": "",
-        "How and where to apply": "",
-        "Use in a Safe System Approach": "",
-        "Proactive Implementation": "",
-        "Emphasis area": "",
-        "Target Crash": "",
-        "Contributing Factors": "",
-        "SSA Pillars": "",
-        "SSA Hierarchy": "",
-        "AASHTO": "",
-        "NCHRP 500 Series Objective": "",
-        "N500St": "",
-        "Road Type_TBD": "",
-        "Benefit-cost ratio": "",
-        "Service Life": "",
-        "Cost": "",
-        "Countermeasure Staus_OnlyforTool": "",
-        "Keyword_OnlyForTool": "",
+        "Key Stakeholder": "Agency maintenance personnel",
+        "How and where to apply": "1. STOP AHEAD markings are intended to increase driver awareness of a downstream STOP sign, usually on an unsignalized intersection approach (with either minor road or all-way stop control).  2. They can be considered for application on any stop-controlled intersection approach and may be most effective on approaches with limited approach sight distance or other visibility issues.  3. The MUTCD states that this marking can be used ?as determined by engineering judgement to supplement signs.",
+        "Use in a Safe System Approach": "STOP AHEAD pavement markings are a good candidate treatment for implementing the SSA principle of redundancy. They complement other treatments designed to increase the conspicuity of STOP signs and support the separation of different road users in time.",
+        "Proactive Implementation": "STOP AHEAD pavement markings can be implemented proactively at intersections. Agencies might select locations for these markings by performing approach sight distance reviews, receiving observations from the public, or other information sources. Locations may also be selected through a systemic approach focused on identifying risk factors present at other STOP-controlled intersection locations with a history of crashes.",
+        "Emphasis area": "Intersection",
+        "Target Crash": "Angle, Rear-end, Turning",
+        "Contributing Factors": "Reduced visibility, driver inattention, failure to stop or yield",
+        "SSA Pillars": "Safe Roads",
+        "SSA Hierarchy": "Tier 4: Increase attentiveness and awareness",
+        "AASHTO": "Safer Drivers and Passengers",
+        "NCHRP 500 Series Objective": "Improve driver awareness of intersections as viewed from the intersection approach",
+        "N500St": "Provide pavement markings with supplementary messages, such as STOP AHEAD",
+        "Road Type_TBD": "Not Specified",
+        "Benefit-cost ratio": "55.1:1",
+        "Service Life": "2",
+        "Cost": "Low",
+        "Countermeasure Staus_OnlyforTool": "Current",
+        "Keyword_OnlyForTool": "Advance warning; visual cue; alert inattentive drivers; reduce stop-run crashes",
         "id": 57,
         "img": "treat082.webp"
     },
